--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "eslint-plugin-jest": "^24.1.3",
     "node-sass": "^5.0.0",
