gh pages action and remove dist

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wadokei",
-    "homepage": "http://ann-kilzer.github.io/wadokei",
+    "homepage": "http://ann-kilzer.github.io/wadokei/",
     "version": "1.0.0",
     "private": true,
     "scripts": {
